Fix Lgtm Warnings 01